Refactored to use config object Added xAxis control  Updated Example  Updated Docs

--- a/example/example.html
+++ b/example/example.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
 <head>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-    <script src="http://code.highcharts.com/stock/highstock.js"></script>
+    <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
     <script src="../src/directives/highcharts-ng.js"></script>
 </head>
 <body>
@@ -11,12 +12,22 @@
 
 <div ng-app="myapp">
     <div ng-controller="myctrl">
-        <input ng-model="chart.title.text">
-        <button ng-click="addSeries()">Add Series</button>
-        <button ng-click="addPoints()">Add Points to Random Series</button>
-        <button ng-click="removeRandomSeries()">Remove Random Series</button>
-        <button ng-click="swapChartType()">Line/Bar</button>
-        <highchart id="chart1" series="chart.series" title="chart.title" options="chart.options"></highchart>
+
+        <div class="span12">
+            <input ng-model="chartConfig.title.text">
+            <button ng-click="addSeries()">Add Series</button>
+            <button ng-click="addPoints()">Add Points to Random Series</button>
+            <button ng-click="removeRandomSeries()">Remove Random Series</button>
+            <button ng-click="swapChartType()">Line/Bar</button>
+            <button ng-click="toggleLoading()">Loading?</button>
+        </div>
+        <div class="row">
+            <highchart id="chart1" config="chartConfig" class="span10" ></highchart>
+        </div>
+        <div class="span6">
+            Min: <input type="number" ng-model="chartConfig.xAxis.currentMin">
+            Max: <input type="number" ng-model="chartConfig.xAxis.currentMax">
+        </div>
     </div>
 </div>
 
@@ -26,7 +37,7 @@
     myapp.controller('myctrl', function ($scope) {
 
         $scope.addPoints = function () {
-            var seriesArray = $scope.chart.series
+            var seriesArray = $scope.chartConfig.series
             var rndIdx = Math.floor(Math.random() * seriesArray.length);
             seriesArray[rndIdx].data = seriesArray[rndIdx].data.concat([1, 10, 20])
         };
@@ -36,26 +47,31 @@
             for (var i = 0; i < 10; i++) {
                 rnd.push(Math.floor(Math.random() * 20) + 1)
             }
-            $scope.chart.series.push({
+            $scope.chartConfig.series.push({
                 data: rnd
             })
         }
 
         $scope.removeRandomSeries = function () {
-            var seriesArray = $scope.chart.series
+            var seriesArray = $scope.chartConfig.series
             var rndIdx = Math.floor(Math.random() * seriesArray.length);
             seriesArray.splice(rndIdx, 1)
         }
 
         $scope.swapChartType = function () {
-            if (this.chart.options.chart.type === 'line') {
-                this.chart.options.chart.type = 'bar'
+            if (this.chartConfig.options.chart.type === 'line') {
+                this.chartConfig.options.chart.type = 'bar'
             } else {
-                this.chart.options.chart.type = 'line'
+                this.chartConfig.options.chart.type = 'line'
+                this.chartConfig.options.chart.zoomType = 'x'
             }
         }
 
-        $scope.chart = {
+        $scope.toggleLoading = function () {
+            this.chartConfig.loading = !this.chartConfig.loading
+        }
+
+        $scope.chartConfig = {
             options: {
                 chart: {
                     type: 'bar'
@@ -66,7 +82,9 @@
             }],
             title: {
                 text: 'Hello'
-            }
+            },
+
+            loading: false
         }
 
     });
