--- a/example/example.html
+++ b/example/example.html
@@ -13,22 +13,23 @@
 
 <div ng-app="myapp">
     <div ng-controller="myctrl">
-
-        <div class="span12">
-            <input ng-model="chartConfig.title.text">
-            <button ng-click="addSeries()">Add Series</button>
-            <button ng-click="addPoints()">Add Points to Random Series</button>
-            <button ng-click="removeRandomSeries()">Remove Random Series</button>
-            <select ng-model="selectedChartType" ng-change="swapChartType()" ng-options="t.id as t.title for t in chartTypes"></select>
-            <button ng-click="toggleLoading()">Loading?</button>
-            <button ng-click="toggleHighCharts()">HighChart/HighStock</button>
-        </div>
         <div class="row">
-            <highchart id="chart1" config="chartConfig" class="span10" ></highchart>
-        </div>
-        <div class="span6">
-            Min: <input type="number" ng-model="chartConfig.xAxis.currentMin">
-            Max: <input type="number" ng-model="chartConfig.xAxis.currentMax">
+            <div class="span9">
+                <div class="row">
+                    <highchart id="chart1" config="chartConfig" class="span9" ></highchart>
+                </div>
+            </div>
+            <div class="span3">
+                <div class="row-fluid">Title <input id="chartTitle" ng-model="chartConfig.title.text"></div>
+                <div class="row-fluid">Type <select ng-model="selectedChartType" ng-change="swapChartType()" ng-options="t.id as t.title for t in chartTypes"></select></div>
+                <button ng-click="addSeries()">Add Series</button>
+                <button ng-click="addPoints()">Add Points to Random Series</button>
+                <button ng-click="removeRandomSeries()">Remove Random Series</button>
+                <button ng-click="toggleLoading()">Loading?</button>
+                <button ng-click="toggleHighCharts()">HighChart/HighStock</button>
+                Min: <input type="number" ng-model="chartConfig.xAxis.currentMin">
+                Max: <input type="number" ng-model="chartConfig.xAxis.currentMax">
+            </div>
         </div>
     </div>
 </div>
