--- a/example/example.html
+++ b/example/example.html
@@ -22,7 +22,8 @@
             <div class="span3">
                 <div class="row-fluid">Title <input ng-model="chartConfig.title.text"></div>
                 <div class="row-fluid">Subtitle <input ng-model="chartConfig.subtitle.text"></div>
-                <div class="row-fluid">Type <select ng-model="selectedChartType" ng-change="swapChartType()" ng-options="t.id as t.title for t in chartTypes"></select></div>
+                <div class="row-fluid">Type <select ng-model="chartConfig.options.chart.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
+                <div class="row-fluid"><button>Add data</button></div>
                 <button ng-click="addSeries()">Add Series</button>
                 <button ng-click="addPoints()">Add Points to Random Series</button>
                 <button ng-click="removeRandomSeries()">Remove Random Series</button>
