--- a/example/example.html
+++ b/example/example.html
@@ -24,10 +24,10 @@
                 <div class="row-fluid">Subtitle <input ng-model="chartConfig.subtitle.text"></div>
                 <div class="row-fluid">Type <select ng-model="chartConfig.options.chart.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
                 <div class="row-fluid"><button>Add data</button></div>
+                <div class="row-fluid"><label for="checkLoading"><input id="checkLoading" type="checkbox" ng-model="chartConfig.loading"> is loading</label></div>
                 <button ng-click="addSeries()">Add Series</button>
                 <button ng-click="addPoints()">Add Points to Random Series</button>
                 <button ng-click="removeRandomSeries()">Remove Random Series</button>
-                <button ng-click="toggleLoading()">Loading?</button>
                 <button ng-click="toggleHighCharts()">HighChart/HighStock</button>
                 Min: <input type="number" ng-model="chartConfig.xAxis.currentMin">
                 Max: <input type="number" ng-model="chartConfig.xAxis.currentMax">
