--- a/example/example.html
+++ b/example/example.html
@@ -24,14 +24,14 @@
                 <div class="row-fluid">Subtitle <input ng-model="chartConfig.subtitle.text"></div>
                 <div class="row-fluid">Type <select ng-model="chartConfig.options.chart.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
                 <div class="row-fluid"><label for="checkLoading"><input id="checkLoading" type="checkbox" ng-model="chartConfig.loading"> is loading</label></div>
-                <div class="row-fluid"><button>Add data</button></div>
                 <div class="row-fluid" ng-repeat="ser in chartSeries">
                     <hr />
                     <div class="row-fluid">Title <input ng-model="ser.name"></div>
                     <div class="row-fluid"><label><input type="checkbox" ng-model="ser.connectNulls"> interpolate</label></div>
                 </div>
                 <hr />
-                <button ng-click="addSeries()">Add Series</button>
+                <div class="row-fluid"><button ng-click="addSeries()">Add Series</button></div>
+
                 <button ng-click="addPoints()">Add Points to Random Series</button>
                 <button ng-click="removeRandomSeries()">Remove Random Series</button>
                 <button ng-click="toggleHighCharts()">HighChart/HighStock</button>
