--- a/example/example.html
+++ b/example/example.html
@@ -28,6 +28,7 @@
                     <hr />
                     <div class="row-fluid">Title <input ng-model="ser.name"></div>
                     <div class="row-fluid">Type <select ng-model="ser.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
+                    <div class="row-fluid">Color <input ng-model="ser.color"></div>
                     <div class="row-fluid"><label><input type="checkbox" ng-model="ser.connectNulls"> interpolate</label></div>
                     <div class="row-fluid"><button ng-click="removeSeries($index)">Delete</button></div>
                 </div>
