--- a/example/example.html
+++ b/example/example.html
@@ -18,6 +18,11 @@
                 <div class="row">
                     <highchart id="chart1" config="chartConfig" class="span9" ></highchart>
                 </div>
+                <div class="row-fluid">
+                    <pre>
+{{ chartConfig }}
+                    </pre>
+                </div>
             </div>
             <div class="span4">
                 <div class="row-fluid">Title <input ng-model="chartConfig.title.text"></div>
