--- a/example/example.html
+++ b/example/example.html
@@ -34,7 +34,8 @@
                 <div class="row-fluid">Title <input ng-model="chartConfig.title.text"></div>
                 <div class="row-fluid">Subtitle <input ng-model="chartConfig.subtitle.text"></div>
                 <div class="row-fluid">Default Type <select ng-model="chartConfig.options.chart.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
-                <div class="row-fluid"><label for="checkLoading"><input id="checkLoading" type="checkbox" ng-model="chartConfig.loading"> is loading</label></div>
+                <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.loading"> is loading</label></div>
+                <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.credits.enabled"> credits</label></div>
                 <div class="row-fluid" ng-repeat="ser in chartSeries">
                     <hr />
                     <div class="row-fluid">Title <input ng-model="ser.name"></div>
