--- a/example/example.html
+++ b/example/example.html
@@ -37,24 +37,24 @@
                 <div class="row-fluid">Stack <select ng-model="chartConfig.options.plotOptions.series.stacking" ng-options="t.id as t.title for t in chartStack"></select></div>
                 <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.loading"> is loading</label></div>
                 <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.credits.enabled"> credits</label></div>
+                <h4>Series</h4>
                 <div class="row-fluid" ng-repeat="ser in chartSeries">
-                    <hr />
-                    <div class="row-fluid">Title <input ng-model="ser.name"></div>
-                    <div class="row-fluid">Type <select ng-model="ser.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
-                    <div class="row-fluid">Color <input ng-model="ser.color"></div>
-                    <div class="row-fluid">Width <input ng-model="ser.lineWidth"></div>
-                    <div class="row-fluid">Dash Style <select ng-model="ser.dashStyle" ng-options="ds.id as ds.title for ds in dashStyles"></select></div>
-                    <div class="row-fluid"><label><input type="checkbox" ng-model="ser.connectNulls"> interpolate</label></div>
-                    <div class="row-fluid"><button ng-click="removeSeries($index)">Delete</button></div>
+                    <div class="span12 well">
+                        <div class="row-fluid">Title <input ng-model="ser.name"></div>
+                        <div class="row-fluid">Type <select ng-model="ser.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
+                        <div class="row-fluid">Color <input ng-model="ser.color"></div>
+                        <div class="row-fluid">Width <input ng-model="ser.lineWidth"></div>
+                        <div class="row-fluid">Dash Style <select ng-model="ser.dashStyle" ng-options="ds.id as ds.title for ds in dashStyles"></select></div>
+                        <div class="row-fluid"><label><input type="checkbox" ng-model="ser.connectNulls"> interpolate</label></div>
+                        <div class="row-fluid"><button ng-click="removeSeries($index)">Delete</button></div>
+                    </div>
                 </div>
-                <hr />
                 <div class="row-fluid"><button ng-click="addSeries()">Add Series</button></div>
-
-                <button ng-click="addPoints()">Add Points to Random Series</button>
-                <button ng-click="removeRandomSeries()">Remove Random Series</button>
-                <button ng-click="toggleHighCharts()">HighChart/HighStock</button>
-                Min: <input type="number" ng-model="chartConfig.xAxis.currentMin">
-                Max: <input type="number" ng-model="chartConfig.xAxis.currentMax">
+                <div class="row-fluid"><button ng-click="addPoints()">Add Points to Random Series</button></div>
+                <div class="row-fluid"><button ng-click="removeRandomSeries()">Remove Random Series</button></div>
+                <div class="row-fluid"><button ng-click="toggleHighCharts()">HighChart/HighStock</button></div>
+                <div class="row-fluid">Min: <input type="number" ng-model="chartConfig.xAxis.currentMin"></div>
+                <div class="row-fluid">Max: <input type="number" ng-model="chartConfig.xAxis.currentMax"></div>
             </div>
         </div>
     </div>
