--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 <p>A simple Angularjs directive for Highcharts.</p>
 
+<p>New to Highcharts-ng? - see the <a href="examples/example.html">Example</a></p>
+
 <h2>
 <a name="current-version" class="anchor" href="#current-version"><span class="octicon octicon-link"></span></a>Current Version</h2>
 
