--- a/example/example.html
+++ b/example/example.html
@@ -5,8 +5,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
     <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
-    <script src="../src/directives/highcharts-ng.js"></script>
-    <script src="../src/app.js"></script>
+    <script src="../src/highcharts-ng.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
 <h2>Highcharts-ng example</h2>
