Changed logic to prevent double redraw Fixes #58 Added replace all example

--- a/example/example.html
+++ b/example/example.html
@@ -53,6 +53,7 @@
                 <div class="row-fluid"><button ng-click="addPoints()">Add Points to Random Series</button></div>
                 <div class="row-fluid"><button ng-click="removeRandomSeries()">Remove Random Series</button></div>
                 <div class="row-fluid"><button ng-click="toggleHighCharts()">HighChart/HighStock</button></div>
+                <div class="row-fluid"><button ng-click="replaceAllSeries()">Replace all series</button></div>
                 <div class="row-fluid">Min: <input type="number" ng-model="chartConfig.xAxis.currentMin"></div>
                 <div class="row-fluid">Max: <input type="number" ng-model="chartConfig.xAxis.currentMax"></div>
             </div>
