--- a/example/example.html
+++ b/example/example.html
@@ -33,6 +33,9 @@
             <div class="span4">
                 <div class="row-fluid">Title <input ng-model="chartConfig.title.text"></div>
                 <div class="row-fluid">Subtitle <input ng-model="chartConfig.subtitle.text"></div>
+                <div class="row-fluid">Width <input ng-model="chartConfig.size.width"></div>
+                <div class="row-fluid">Height <input ng-model="chartConfig.size.height"></div>
+                <div class="row-fluid"><button ng-click="reflow()">reflow</button></div>
                 <div class="row-fluid">Default Type <select ng-model="chartConfig.options.chart.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
                 <div class="row-fluid">Stack <select ng-model="chartConfig.options.plotOptions.series.stacking" ng-options="t.id as t.title for t in chartStack"></select></div>
                 <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.loading"> is loading</label></div>
