--- a/example/charts/general-example.html
+++ b/example/charts/general-example.html
@@ -5,7 +5,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
     <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
-    <script src="../src/highcharts-ng.js"></script>
+    <script src="../../src/highcharts-ng.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
