--- a/example/charts/general-example.html
+++ b/example/charts/general-example.html
@@ -4,7 +4,7 @@
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js"></script>
-    <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+    <script src="http://code.highcharts.com/stock/highstock.js"></script>
     <script src="../../src/highcharts-ng.js"></script>
     <script src="app.js"></script>
 </head>
