--- a/example/lazyload/example.html
+++ b/example/lazyload/example.html
@@ -14,6 +14,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
   <script src="../../dist/highcharts-ng.js"></script>
+  <script src="../../dist/highcharts-ng-lazyload.js"></script>
   <script src="app.js"></script>
 </head>
 
