--- a/example/charts/general-example.html
+++ b/example/charts/general-example.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-    <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+    <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
     <script src="../../src/highcharts-ng.js"></script>
     <script src="app.js"></script>
 </head>
