Support commonJS and browserify. Cleanup of #572 part 2

--- a/example/charts/general-example.html
+++ b/example/charts/general-example.html
@@ -2,10 +2,12 @@
 <html>
 <head>
     <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="../../src/highcharts-ng.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
     <script src="../../src/highcharts-ng.js"></script>
+
     <script src="app.js"></script>
 </head>
 <body>
