--- a/example/charts/general-example.html
+++ b/example/charts/general-example.html
@@ -34,17 +34,26 @@
                  <div class="row-fluid">{{chartConfig.getChartObj().chartHeight}}</div>
             </div>
             <div class="span4">
-                <div class="row-fluid">Title <input ng-model="chartConfig.title.text"></div>
-                <div class="row-fluid">Subtitle <input ng-model="chartConfig.subtitle.text"></div>
-                <div class="row-fluid">Width <input type="number" ng-model="chartConfig.chart.width"></div>
-                <div class="row-fluid">Height <input  type="number" ng-model="chartConfig.chart.height"></div>
-                <div class="row-fluid">Default Type <select ng-model="chartConfig.chart.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
-                <div class="row-fluid">Stack <select ng-model="chartConfig.plotOptions.series.stacking" ng-options="t.id as t.title for t in chartStack"></select></div>
-                <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.loading"> is loading</label></div>
-                <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.credits.enabled"> credits</label></div>
-                <h4>Series</h4>
-                <div class="row-fluid" ng-repeat="ser in chartSeries">
-                    <div class="span12 well">
+              <div class="row-fluid">Title <input ng-model="chartConfig.title.text"></div>
+              <div class="row-fluid">Subtitle <input ng-model="chartConfig.subtitle.text"></div>
+              <div class="row-fluid">Width <input type="number" ng-model="chartConfig.chart.width"></div>
+              <div class="row-fluid">Height <input  type="number" ng-model="chartConfig.chart.height"></div>
+              <div class="row-fluid">Default Type <select ng-model="chartConfig.chart.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
+              <div class="row-fluid">Stack <select ng-model="chartConfig.plotOptions.series.stacking" ng-options="t.id as t.title for t in chartStack"></select></div>
+              <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.loading"> is loading</label></div>
+              <div class="row-fluid"><label><input type="checkbox" ng-model="chartConfig.credits.enabled"> credits</label></div>
+              <div class="row-fluid"><button ng-click="addSeries()">Add Series</button></div>
+              <div class="row-fluid"><button ng-click="addPoints()">Add Points to Random Series</button></div>
+              <div class="row-fluid"><button ng-click="removeRandomSeries()">Remove Random Series</button></div>
+              <div class="row-fluid"><button ng-click="toggleHighCharts()">HighChart/HighStock</button></div>
+              <div class="row-fluid"><button ng-click="replaceAllSeries()">Replace all series</button></div>
+              <div class="row-fluid"><button ng-click="addAxis('x')">Add X Axis</button></div>
+              <div class="row-fluid"><button ng-click="addAxis('y')">Add Y Axis</button></div>
+              <div class="row-fluid">Min: <input type="number" ng-model="chartConfig.xAxis.currentMin"></div>
+              <div class="row-fluid">Max: <input type="number" ng-model="chartConfig.xAxis.currentMax"></div>
+              <h4>Series</h4>
+              <div class="row-fluid" ng-repeat="ser in chartSeries">
+                <div class="span12 well">
                         <div class="row-fluid">Title <input ng-model="ser.name"></div>
                         <div class="row-fluid">Type <select ng-model="ser.type" ng-options="t.id as t.title for t in chartTypes"></select></div>
                         <div class="row-fluid">Color <input ng-model="ser.color"></div>
@@ -53,14 +62,8 @@
                         <div class="row-fluid"><label><input type="checkbox" ng-model="ser.connectNulls"> interpolate</label></div>
                         <div class="row-fluid"><button ng-click="removeSeries($index)">Delete</button></div>
                     </div>
-                </div>
-                <div class="row-fluid"><button ng-click="addSeries()">Add Series</button></div>
-                <div class="row-fluid"><button ng-click="addPoints()">Add Points to Random Series</button></div>
-                <div class="row-fluid"><button ng-click="removeRandomSeries()">Remove Random Series</button></div>
-                <div class="row-fluid"><button ng-click="toggleHighCharts()">HighChart/HighStock</button></div>
-                <div class="row-fluid"><button ng-click="replaceAllSeries()">Replace all series</button></div>
-                <div class="row-fluid">Min: <input type="number" ng-model="chartConfig.xAxis.currentMin"></div>
-                <div class="row-fluid">Max: <input type="number" ng-model="chartConfig.xAxis.currentMax"></div>
+              </div>
+
             </div>
         </div>
     </div>
