update jsfiddle link

--- a/jsfiddles/dynamic_axis/demo.html
+++ b/jsfiddles/dynamic_axis/demo.html
@@ -1,6 +1,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
 <script src="https://code.highcharts.com/stock/highstock.src.js"></script>
-<script src="https://rawgit.com/Yoshi9143/highcharts-ng/07ca21283410af95f86c109dee712dbba34ccbd5/src/highcharts-ng.js"></script>
+<script src="https://rawgithub.com/pablojim/highcharts-ng/master/src/highcharts-ng.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
 <div ng-app="myapp">
